# backend/docs/swagger.yaml
@@ -1220,6 +1220,48 @@ paths:
       summary: Credit user balance
       tags:
       - admin
+  /users/mail:
+    post:
+      consumes:
+      - multipart/form-data
+      description: Allows admin to send a custom email to all users with optional
+        file attachments
+      operationId: admin-mail-all-users
+      parameters:
+      - description: Email subject
+        in: formData
+        name: subject
+        required: true
+        type: string
+      - description: Email body content
+        in: formData
+        name: body
+        required: true
+        type: string
+      - description: Email attachments (multiple files allowed)
+        in: formData
+        name: attachments
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/app.APIResponse'
+        "400":
+          description: Invalid request format
+          schema:
+            $ref: '#/definitions/app.APIResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.APIResponse'
+      security:
+      - AdminMiddleware: []
+      summary: Send mail to all users
+      tags:
+      - admin
   /vouchers:
     get:
       consumes:
